# prodgpt

./: .gitignore  .pre-commit-config.yaml  README.md  data_warehouse.ipynb  mkdocs.yml  note.ipynb  persistence.txt  requirements.txt  setup.py
airflow/: docker-compose.yaml
airflow/dags/: dataops.py  first_dag.py  local_data_to_data_lake.py  new_example.py  xcom_dag.py
configs/: default.yaml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: text_generation.yml
great_expectations/expectations/: .ge_store_backend_id  text_generation.json
infrasturcture/terraform/: .terraform.lock.hcl  (+2 more)
monitoring/: app.py  docker-compose.yaml  log.py  pyproject.toml  requirements.txt  test.py
monitoring/monitoring/: app.py  log.py  schema.py
monitoring/tests/: test_log.py
prodgpt/: dataset.py  model.py  persistence.py  pyproject.toml  tokenizer.py  utils.py
prodgpt/data/: data_lake.py  data_warehouse.py  dataset.py  extractor.py  flow.py
prodgpt/evaluation/: model.py
prodgpt/prodgpt/: dataset.py  test_flow.py
prodgpt/prodgpt/data/: data_lake.py  data_quality.py  data_warehouse.py  dataset.py  utils.py
prodgpt/prodgpt/training/: flow.py
prodgpt/tests/: conftest.py  test_dataset.py  test_tokenizer.py  test_utils.py
prodgpt/tests/data/: test_data_lake.py  test_data_warehouse.py  test_extractor.py  test_utils.py
prodgpt/tests/evaluation/: test_model.py
prodgpt/training/: flow.py  utils.py
progpt/: data.py  train.py
scripts/: deployment.py  train-deployment.yaml  training.py
tests/: conftest.py  test_dataset.py  test_utils.py
(+9 files in other folders)
