[tool.poetry]
name = "prodgpt"
version = "0.1.0"
description = ""
authors = ["xrsrke <xariusdrake@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch=">=2.0.1"
torchmetrics=">=0.11.4"
transformers=">=4.29.2"
wandb=">=0.15.3"
accelerate=">=0.19.0"
datasets=">=2.12.0"
dbt-core=">=1.5.1"
deepspeed=">=0.9.2"
google-cloud=">=0.34.0"
google-cloud-bigquery=">=3.11.0"
google-cloud-storage=">=2.9.0"
metaflow=">=2.9.3"
pydantic=">=1.10.8"
sqlalchemy=">=2.0.15"
sqlalchemy-bigquery="*"
zstandard = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
